# crest

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh  schur_lumped_leapfrog.json
bench/: bisect_to_tolerance.cpp
include/crest/basis/: amg_corrector_solver.hpp  basis.hpp  homogenized_basis.hpp  homogenized_basis_dense_fallback.hpp  lagrange_basis2d.hpp  linear_lagrangian_basis.hpp  quasi_interpolation.hpp  schur_corrector_solver.hpp
include/crest/basis/detail/: homogenized_basis_detail.hpp
include/crest/geometry/: biscale_mesh.hpp  indexed_mesh.hpp  mesh_algorithms.hpp  patch.hpp  refinement.hpp  triangle.hpp  vertex.hpp
include/crest/io/: homogenized_basis_io.hpp
include/crest/quadrature/: rules.hpp  simpsons.hpp  triquad.hpp
include/crest/util/: algorithms.hpp  eigen_extensions.hpp  stat.hpp  timer.hpp
include/crest/wave/: constraints.hpp  integrators.hpp  load.hpp  solver.hpp  transformers.hpp
notebooks/: convergence.ipynb  mesh.ipynb
pycrest/: mesh.py  pycrest.cpp  pycrest.h  pycrest_cffi.py  refinement.py  visualize.py
pycrest/private/: cffi.py
pycrest/test/: test_pycrest_cffi.py
pycrest/test/private/: test_cffi.py
python-support/: mesh.py  visualize.py
tests/: experiment_runner.cpp
tests/experiments/: experiment.hpp  experiments.hpp
tests/integration/: convergence.cpp  io.cpp
tests/python-support/: experiments.py  util.py
tests/unit/basis/: homogenized_basis.cpp  lagrange_basis2d.cpp  linear_lagrangian_basis.cpp  quasi_interpolation.cpp
tests/unit/geometry/: indexed_mesh.cpp  mesh_algorithms.cpp  patch.cpp  refinement.cpp
tests/unit/quadrature/: simpsons.cpp  triquad.cpp
tests/unit/util/: eigen_extensions.cpp  stat.cpp  vertex_matchers.cpp
tests/util/: eigen_matchers.hpp  test_generators.hpp  vertex_matchers.hpp
tools/mesh/: main.cpp
util/: generate_quadrature_macros.py
